Incorrect paint of 'translate' property animation https://bugs.webkit.org/show_bug.cgi?id=247299 rdar://102064448

Reviewed by Simon Fraser.

When style changes, ensure we don't just check for the "transform" property
being set on the new style but any of the properties that contribute to a
transform being applied to the renderer when considering whether this renderer
will end up on a layer.

* LayoutTests/fast/repaint/translate-animation-repaint-expected.txt: Added.
* LayoutTests/fast/repaint/translate-animation-repaint.html: Added.
* Source/WebCore/rendering/RenderElement.cpp:
(WebCore::RenderElement::repaintBeforeStyleChange):

Canonical link: https://commits.webkit.org/259173@main